--- a/bcs/drzewo/templates/drzewo/full_tree_interactive.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_interactive.html
@@ -51,10 +51,17 @@
                     <input type="checkbox" class="view-mode" value="years">
                     Lata
                 </label>
+                <br>
                 <label>
                     <input type="checkbox" class="view-mode" value="descendants">
                     Potomkowie
                 </label>
+                <br>
+                <label>
+                    <input type="checkbox" class="view-mode" value="color-nodes">
+                    Koloruj węzły
+                </label>
+                <div id="color-picker" class="sidebar__color-picker"></div>
             </div>
             <hr>
             <p>Kliknij w węzeł → otwiera szczegóły. Najedź → podgląd.</p>
