feat(drzewo/html): add "lineages" option to color-mode dropdown
- added "Rody" option to the color-mode select dropdown in full_tree_interactive.html
- provides user ability to activate lineage-related modes
- placeholder div `#lineages-options` added for dynamic options

Affected files:
- bcs/drzewo/templates/drzewo/full_tree_interactive.html

--- a/bcs/drzewo/templates/drzewo/full_tree_interactive.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_interactive.html
@@ -41,6 +41,7 @@
                     <option value="generation">Pokolenie</option>
                     <option value="status">Status</option>
                     <option value="aktywnosc">Aktywność</option>
+                    <option value="lineages">Rody</option>
                 </select>
                 <div id="legend" class="sidebar__legend"></div>
             </div>
