feat(drzewo/html): inject "active-predecessors" checkbox in lineages mode
- when "lineages" color mode is selected, a checkbox for "Aktywni założyciele rodów" is displayed
- ensures checkbox is only created once
- stores reference to affected divs in `ColorModes.divs_changed` for cleanup

Affected files:
- bcs/drzewo/static/drzewo/js/interactive_graph/color_modes.js

--- a/bcs/drzewo/templates/drzewo/full_tree_interactive.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_interactive.html
@@ -43,6 +43,7 @@
                     <option value="aktywnosc">Aktywność</option>
                     <option value="lineages">Rody</option>
                 </select>
+                <div id="lineages-options"></div>
                 <div id="legend" class="sidebar__legend"></div>
             </div>
             <hr>
