feat(drzewo/js & html): migrate legend rendering to template-based system
- introduced `<template id="legend-item-template">` for reusable legend items
- replaced manual DOM construction with cloning of template instances
- simplified color + label assignment through structured elements
- renamed `divs_injected` to `divs_changed` for consistency
- ensured consistent cleanup by updating `clearModes()`

Affected files:
- bcs/drzewo/static/drzewo/js/interactive_graph/color_modes.js
- bcs/drzewo/templates/drzewo/full_tree_interactive.html

--- a/bcs/drzewo/templates/drzewo/full_tree_interactive.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_interactive.html
@@ -46,6 +46,12 @@
                         Aktywni założyciele rodów
                     </label>
                 </div>
+                <template id="legend-item-template">
+                    <div class="sidebar__legend-item">
+                        <div class="sidebar__legend-item-color"></div>
+                        <span class="sidebar__legend-item-text"></span>
+                    </div>
+                </template>
                 <div id="legend" class="sidebar__legend"></div>
             </div>
             <hr>
