feat(drzewo/js): dynamic color-mode options system
- Replace static lineages checkbox with a generic color-mode options container.
- Add HTML template for color-mode checkboxes.
- Add `ColorModes.options` to track per-mode option states.
- Implement `ColorModes.renderColorModeOptions` to dynamically render
  checkboxes and attach change handlers.
- Update `applyMode` to read option values from `ColorModes.options`.
- Remove obsolete static checkbox handling in `EventListener`.
- Remove now-unnecessary `.color-mode:checked` dispatch from main.js.
- Remove obsolete div handling from `appendLegend` and `clearModes`.

Affected files:
- bcs/drzewo/static/drzewo/js/interactive_graph/color_modes.js
- bcs/drzewo/static/drzewo/js/interactive_graph/events.js
- bcs/drzewo/static/drzewo/js/interactive_graph/main.js
- bcs/drzewo/templates/drzewo/full_tree_interactive.html

--- a/bcs/drzewo/templates/drzewo/full_tree_interactive.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_interactive.html
@@ -36,16 +36,16 @@
                     <option value="aktywnosc">Aktywność</option>
                     <option value="lineages">Rody</option>
                 </select>
-                <div id="lineages-options" style="display:none">
-                    <br>
+                <template id="color-mode-options-checkbox-template">
                     <label>
-                        <input id="lineages-active-predecessors"
-                               type="checkbox"
-                               class="color-mode"
-                               value="active-predecessors">
-                        Aktywni założyciele rodów
+                        <input type="checkbox" class="color-mode">
+                        <span class="checkbox-text"></span>
                     </label>
-                </div>
+                    <br>
+                </template>
+                <br>
+                <br>
+                <div id="color-mode-options"></div>
                 <template id="legend-item-template">
                     <div class="sidebar__legend-item">
                         <div class="sidebar__legend-item-color"></div>
